# redux_todo_in_astro

./: .dockerignore  .env.example  .env.sqlite  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.fixed  Dockerfile.prod  Dockerfile.test  Dockerfile.v2  PWA-README.md  README.md  Untitled.md  analyze_logs.py  astro.config.mjs  babel.config.cjs  babel.config.js  benchmark_4digit_results.md  debug_playwright.sh  direct-execution.js  direct-test.js  docker-compose.yml  gasing_addition.py  gasing_subtraction_profile.prof  get_name.py  jest-resolver.cjs  jest-resolver.js  jest.config.cjs  jest.config.js  jest.setup.js  large_addition_dataset.csv  mqtt_dashboard_darkmode_energypro_fixed.html  package-lock.json  package.json  playwright-state.json  playwright.config.ts  (+20 more)
.obsidian/: workspace.json
Docs/: Instruction.md  Ollama_with_MCP_Instruction.md  Run_Alessandro's_User_Machine.md  The Novel from Bali - starting from Symmetries.md  dockerswarm  ollama-setup-guide.md
Kubernetes/: Dockerfile.complete  Dockerfile.dev  Dockerfile.fixed  Dockerfile.k8s  Dockerfile.patched  Dockerfile.prod  Dockerfile.prod.clean  Dockerfile.simple  Dockerfile.static  Dockerfile.static-simple  Dockerfile.wrapper  build-docker-image.sh  build-fixed-image.sh  build-patched-image.sh  build-static-image.sh  build-wrapper-image.sh  checklist.md  (+35 more)
gcal-mcp-server/: .gitignore  README.md  calendar_integration.py  client.py  pyproject.toml  ruff.toml  server.py  setup.py
gcal-mcp-server/server/: calendar_integration.py  client.py  openai-client.py
(+3505 files in other folders)
